Что-то рабочее вырисовывается
