# internal/handlers/user_handler/login_user.go
@@ -3,6 +3,8 @@ package user_handler
 import (
 	"github.com/labstack/echo/v4"
 	"net/http"
+	"tracking_service/internal/domain"
+	"tracking_service/pkg/authorization"
 )
 
 // LoginUser godoc
@@ -11,21 +13,21 @@ import (
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param credentials body map[string]string true "Credentials"
+// @Param user_handler body domain.UserWeb true "UserWeb"
 // @Success 200 {object} map[string]string
 // @Failure 400 {string} string 'StatusBadRequest'
 // @Failure 500 {string} string 'StatusInternalServerError'
 // @Router /users/login [post]
 func (h *UserHandler) LoginUser(c echo.Context) error {
-	credentials := make(map[string]string)
+	credentials := new(domain.UserWeb)
 	if err := c.Bind(&credentials); err != nil {
 		return c.JSON(http.StatusBadRequest, err)
 	}
-
-	token, err := h.service.Login(credentials["username"], credentials["password"])
+	token, err := h.service.Login(credentials.Login, credentials.Password)
 	if err != nil {
 		return c.JSON(http.StatusUnauthorized, err)
 	}
+	authorization.SetJWTCookie(c, token)
 
 	return c.JSON(http.StatusOK, map[string]string{
 		"token": token,
